--- a/assets/css/toolkit-inverse.css
+++ b/assets/css/toolkit-inverse.css
@@ -497,7 +497,7 @@ pre {
   width: 100%;
   padding-right: 10px;
   padding-left: 10px;
-  /*margin-right: auto;*/
+  margin-right: auto;
   margin-left: auto; }
   @media (min-width: 768px) {
     .bw {
